--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="new-btnsec">
 							<div class="search-box">
 								<ul class="header-login">
-									<li><a href="./login.html">Apply for Loan</a></li>
+									<li><a href="./Login.html">Apply for Loan</a></li>
 								</ul>
 							</div>
 							<div class="search-box">
