--- a/Login.html
+++ b/Login.html
@@ -100,7 +100,7 @@
 	<!--navbar-->
      <!-- login page -->
      <section>
-        <div class="container mt-5">
+        <div class="container login-container">
             <div class="main">
                 <h1>CreditOne</h1>
                 <h3>Enter your login credentials</h3>
