--- a/Login.html
+++ b/Login.html
@@ -1,222 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
-	<link rel="icon" type="image/x-icon" href="./assets/image/fevicon.ico">
-	<!--font awesome css-->
-	<link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--google fonts-->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-		rel="stylesheet">
-	<!--Bootstrap css-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" href="./css/owl.carousel.min.css">
-	<link rel="stylesheet" href="./css/animate.min.css">
-	<!--custom css-->
-	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/media.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Credit One Login</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
-
 <body>
-
-	<!--navbar-->
-	<section class="">
-		<div class="container nav-res-container">
-			<div class="container">
-				<nav>
-					<div class="navbar">
-						<i class='bx bx-menu'></i>
-						<div class="logo"><a href="./index.html"><img src="./assets/image/logo.png" alt=""
-									class="coincred_logo"></a></div>
-						<div class="nav-links">
-							<div class="sidebar-logo">
-								<span class="logo-name"><a href="#"><img src="./assets/image/logo.png" alt=""
-											class="coincred_logo"></a></span>
-								<i class='bx bx-x'></i>
-							</div>
-							<ul class="links">
-								<li><a href="./index.html">Home</a></li>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">FAQs</a></li>
-								<li>
-									<a href="#">Product</a>
-									<i class='bx bxs-chevron-down js-arrow arrow '></i>
-									<ul class="js-sub-menu sub-menu">
-										<li><a href="./privacy-policy.html">Personal Laon</a></li>
-										<li><a href="./about.html">Business Loan</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Contact</a></li>
-								<li class="doneshow-502">
-									<div class="search-box">
-										<ul class="header-login">
-											<li><a href="./login.html" style="color: #fff;">Track yout loan status</a>
-											</li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="new-btnsec">
-							<div class="search-box">
-								<ul class="header-login">
-									<li><a href="./Login.html">Apply for Loan</a></li>
-								</ul>
-							</div>
-							<div class="search-box">
-								<ul class="header-login">
-									<li class="doneshow-501"><a href="./login.html">Track yout loan status</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-					<!-- <div class="new-btnsec doneshow-501">
-						<div class="search-box">
-							<ul class="header-login">
-								<li><a href="./login.html">Apply for Loan</a></li>
-							</ul>
-						</div>
-						<div class="search-box">
-							<ul class="header-login">
-								<li><a href="./login.html">Track yout loan status</a></li>
-							</ul>
-						</div>
-					</div>  -->
-				</nav>
-			</div>
-		</div>
-	</section>
-	<!--navbar-->
-     <!-- login page -->
-     <section>
-        <div class="container login-container">
-            <div class="main">
-                <h1>CreditOne</h1>
-                <h3>Enter your login credentials</h3>
-                <form action="">
-                    <label for="first">
-                        Username:
-                    </label>
-                    <input type="text" id="first" name="first" placeholder="Enter your Username" required>
-
-                    <label for="password">
-                        Password:
-                    </label>
-                    <input type="password" id="password" name="password" placeholder="Enter your Password" required>
-
-                    <div class="wrap">
-                        <button type="submit" onclick="solve()">
-                            Submit
-                        </button>
+    <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
+        <div class="row w-100">
+            <div class="col-md-6 d-none d-md-flex welcome-section align-items-center justify-content-center">
+                <img src="/assets/image/loginIllustration.png" alt="Welcome" class="img-fluid">
+            </div>
+            <div class="col-md-6 login-section d-flex flex-column align-items-center justify-content-center">
+                <img src="/assets/image/logo.png" alt="Credit One" class="logo mb-4">
+                <h1 class="mb-4">Welcome Back</h1>
+                <form class="w-75">
+                    <div class="form-group">
+                        <label for="username">Enter User Name</label>
+                        <input type="text" class="form-control" id="username" name="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="password" name="password">
+                            <div class="input-group-append">
+                                <span class="input-group-text" onclick="togglePasswordVisibility()">👁️</span>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mb-3">Login Now</button>
+                    <button type="button" class="btn btn-light btn-block google-login mb-3">
+						<img src="/assets/image/google.png" alt="google" class="google-btn-logo" />
+						<span>Login with Google</span>
+					</button>
+                    <div class="text-center additional-options">
+                        <a href="#">Forget Password? Click Here</a>
+                        <br>
+                        <a href="#">Don't have an account? Create new account now</a>
                     </div>
                 </form>
-                <p>Not registered?
-                    <a href="#" style="text-decoration: none;">
-                        Create an account
-                    </a>
-                </p>
             </div>
         </div>
-    </section>
-<!-- login page -->
-    <!--footer start-->
-	<footer>
-		<section class="footer-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="footer-logo">
-							<a href="./index.html"><img src="./assets/image/logo.png" alt="" class="footer-logo"></a>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<h6 class="footer-cmn-heading">Step up your crypto trading to the next level</h6>
-						<h6 class="footerfind">Find us Here</h6>
-						<ul class="footer-social">
-							<li><a href="https://www.facebook.com/profile.php?id=100087902046367" target="_blank"><img
-										src="./assets/image/facebook.png" alt=""></a>
-							</li>
-							<li><a href="https://www.linkedin.com/company/coin-cred/" target="_blank"><img
-										src="./assets/image/linkedin.png" alt=""></a>
-							</li>
-							<li><a href="https://t.me/coin_cred" target="_blank"><img src="./assets/image/telegram.png"
-										alt=""></a>
-							</li>
-							<li><a href="https://twitter.com/coincredofficl" target="_blank"><img
-										src="./assets/image/twitter.png" alt=""></a></li>
-							<li><a href="https://www.instagram.com/coincredofficial/" target="_blank"><img
-										src="./assets/image/instagram.png" alt=""></a></li>
-							<li><a href="https://www.youtube.com/@coincredofficial" target="_blank"><img
-										src="./assets/image/youtube.png" alt=""></a></li>
-						</ul>
-						<p class="footerfind">Connect With Us</p>
-						<div class="newsletter-res">
-							<form action="">
-								<input type="email" name="" id="" placeholder="E-Mail"
-									class="footernewletter changecolorfooter">
-								<button type="submit" class="footerbtnnewsletter">Subscribe</button>
-							</form>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="conter-footer">
-							<h6 class="footer-cmn-heading newfooter-border">Useful Link</h6>
-							<ul class="useful">
-								<li><a href="./terms-and-condition.html">Terms of Use</a></li>
-								<li><a href="./privacy-policy.html">Privacy Policy</a></li>
-								<li><a href="./faq.html">FAQs</a></li>
-								<li><a href="./trust-and-safety.html">Trust & Safety</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="last-footer">
-							<h6 class="footer-cmn-heading newfooter-border-1">For all the Updates</h6>
-							<p>of new opportunities, events, giveaways, new coin launches and more</p>
-							<div class="mainf-ter-community">
-								<a href="https://t.me/coin_cred"><img src="./assets/image/joincomm-footer.png" alt="">
-									Join CoinCRED
-									Community</a>
-							</div>
-							<div class="footer-app">
-								<ul>
-									<li><a href="https://apps.apple.com/in/app/coincred/id1596466402"><img
-												src="./assets/image/appstore.png" alt=""></a></li>
-									<li><a
-											href="https://play.google.com/store/apps/details?id=com.coincred.android&pli=1"><img
-												src="./assets/image/playstore.png" alt=""></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<h6 class="copyright">Copyright ©2022 CoinCRED. All rights reserved.</h6>
-	</footer>
-	<!--footer end-->
-	
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.8/typed.min.js"></script>
-	<script src="./js/owl.carousel.min.js"></script>
-	<script src="./js/wow.min.js"></script>
-	<script src="/js/app.js"></script>
-	<script>
+    </div>
 
-	</script>
+    <script>
+        function togglePasswordVisibility() {
+            var passwordField = document.getElementById('password');
+            var passwordType = passwordField.getAttribute('type');
+            passwordField.setAttribute('type', passwordType === 'password' ? 'text' : 'password');
+        }
+    </script>
 </body>
-
 </html>
