--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							</span>
 						</div>
 					</div>
-					<div class="thirdshowpara">
+					<!-- <div class="thirdshowpara">
 						<p class="third-para">This is not all. We are always there when you are in need of immediate
 							funds, provided your repayment
 							record is clean.</p>
@@ -230,7 +230,7 @@
 							<span class="color: White;">
 							</span>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
